# Block-Game-AI

./: .gitignore  CMakeLists.txt  README.md
include/: board.hpp  game.hpp  pieces.hpp  terminal_ui.hpp  types.hpp
src/: board.cpp  game.cpp  main.cpp  perft.cpp  pieces.cpp  simulator.cpp  terminal_ui.cpp
